force-app/main/default/objects/Examination_User__c/Examination_User__c.object-meta.xml
<CustomObject>
    <label>Examination User</label>
    <nameField>
        <label>Examination User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Examination User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>