force-app/main/default/objects/Examination_User__c/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examination</label>
    <referenceTo>Examination__c</referenceTo>
    <relationshipLabel>Examination User</relationshipLabel>
    <relationshipName>Examination_User</relationshipName>
    <type>Lookup</type>
</CustomField>