force-app/main/default/objects/Examination_User__c/fields/ExternalId_Key__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_Key__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>